--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ngxs/logger-plugin": "^3.7.1",
+    "@ngxs/store": "^3.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -32,6 +34,7 @@
     "@angular-eslint/template-parser": "2.0.2",
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
+    "@ngxs/devtools-plugin": "^3.7.1",
     "@types/eslint": "^7.2.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
